[package]
name = "lune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "lune"

[lib]
path = "src/lib/lib.rs"
name = "lune"

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.130"
serde-lexpr = "0.1.2"
serde_derive = "1.0.130"
colored = "2.0.0"